# AES-vs-GOST-Encryption

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  crypto_workers.cpp  crypto_workers.h  main.cpp
aes/: CMakeLists.txt  aes.cpp  aes.h
argparser/: CMakeLists.txt  parser.cpp  parser.h
benchmark/: benchmark.cpp  benchmark.h
benchmarking/: CMakeLists.txt  benchmarking.cpp  benchmarking.h
chacha20/: CMakeLists.txt  chacha20.cpp  chacha20.h
common/: bit_operations.h  defines.h  file.h  intrinsics.h  macros.h
gost_28147-89/: CMakeLists.txt  gost.cpp  gost.h  key.h  state.h
scripts/: get_video_raw.py  handle_benchmark.py  stand.py
tests/: CMakeLists.txt  main.cpp
tests/aes/: CMakeLists.txt  aes_test.cpp
tests/chacha20/: CMakeLists.txt  chacha20_test.cpp
tests/gost/: CMakeLists.txt  gost_test.cpp
